--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "./lib/bcurl.js",
   "scripts": {
     "lint": "eslint lib/ || exit 0",
-    "test": "mocha --reporter spec test/*-test.js"
+    "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "brq": "~0.1.3",
@@ -26,7 +26,7 @@
     "bsock": "~0.1.3"
   },
   "devDependencies": {
-    "mocha": "^5.2.0"
+    "bmocha": "^0.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
