--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Christopher Jeffrey <chjjeffrey@gmail.com>",
   "main": "./lib/bcurl.js",
   "scripts": {
-    "lint": "eslint lib/ || exit 0",
+    "lint": "eslint lib/ test/ || exit 0",
     "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
@@ -26,7 +26,7 @@
     "bsock": "~0.1.8"
   },
   "devDependencies": {
-    "bmocha": "^2.1.0"
+    "bmocha": "^2.1.2"
   },
   "engines": {
     "node": ">=8.0.0"
