--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "main": "./lib/bcurl.js",
   "scripts": {
     "lint": "eslint lib/ test/ || exit 0",
-    "test": "bmocha --reporter spec test/*-test.js"
+    "lint-ci": "eslint lib/ test/",
+    "test": "bmocha --reporter spec test/*-test.js",
+    "test-ci": "nyc -a -n 'lib/**/*.js' --reporter=lcov --reporter=text npm run test"
   },
   "dependencies": {
     "brq": "~0.1.7",
