--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "main": "./lib/bcurl.js",
   "scripts": {
     "lint": "eslint lib/ test/",
-    "test": "bmocha --reporter spec test/*-test.js",
-    "test-ci": "nyc -a -n 'lib/**/*.js' --reporter=lcov --reporter=text npm run test"
+    "lint-types": "tsc -p .",
+    "test": "bmocha --reporter spec test/*-test.js"
   },
   "dependencies": {
     "brq": "~0.1.8",
@@ -27,7 +27,8 @@
     "bsock": "~0.1.9"
   },
   "devDependencies": {
-    "bmocha": "^2.1.2"
+    "bmocha": "^2.1.8",
+    "bts-type-deps": "^0.0.3"
   },
   "engines": {
     "node": ">=8.0.0"
